responsiveness in pages

--- a/completed-projects.html
+++ b/completed-projects.html
@@ -91,7 +91,7 @@
         </li>
         <li class="dropdown"><a href="projects.html"><span><h5>Projects</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
           <ul>
-            <li><a href="project_templtes/project-1.html">Ongoing Projects</a></li>
+            <li><a href="projects.html">Ongoing Projects</a></li>
             <li><a href="project_templtes/project-1.html">Completed Projects</a></li>
           </ul>
         </li>
@@ -140,7 +140,7 @@
                 <!-- project-1 -->
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                   <div class="ong-project">
-                    <a href="project_templtes/project-1.html">
+                    <a href="project_templtes/completed-1.html">
                       <img src="assets/img/Products/ambusens.png" class="img-fluid"  h-9 w-10 alt="...">
                     </a>
                     <div class="ong-project-content">
@@ -164,7 +164,9 @@
                 <!-- project-2 -->
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="ong-project">
+                      <a href="project_templtes/completed-2.html">
                       <img  id="tribe-img" src="assets/img/Products/agrisens.png" class="img-fluid" h-9 w-10 alt="...">
+                      </a>
                       <div class="ong-project-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category">Development of a Sensor based Networking System for Improved Water Management for Irrigated Crops (WMI)</p>
@@ -189,7 +191,9 @@
                   <!-- Project-3 -->
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="ong-project">
+                      <a href="project_templtes/completed-3.html">
                       <img src="assets/img/project_img/m2m.png" class="img-fluid"  h-9 w-10  alt="...">
+                      </a>
                       <div class="ong-project-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category"> Measurement to Management (M2M): Improved Water Use Efficiency and Agricultural Productivity Through Experimental Sensor Network</p>
@@ -212,7 +216,9 @@
                   <!-- project-4 -->
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="ong-project">
+                      <a href="project_templtes/completed-4.html">
                       <img src="assets/img/Products/s-wVirtualLab.png" class="img-fluid"  h-9 w-10  alt="...">
+                      </a>
                       <div class="ong-project-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category">Software Engineering Virtual Lab (VLS-10)</p>
@@ -236,7 +242,9 @@
                   <!-- Project-5 -->
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="ong-project">
+                      <a href="project_templtes/completed-5.html">
                       <img src="assets/img/Products/advVL.png" class="img-fluid"  h-9 w-10  alt="...">
+                      </a>
                       <div class="ong-project-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category">Advanced Network Technologies Virtual Lab (VLS-9)</p>
@@ -260,7 +268,9 @@
                   <!-- project-6 -->
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="ong-project">
+                      <a href="project_templtes/completed-6.html">
                       <img src="assets/img/project_img/fnd.jpg" class="img-fluid"  h-9 w-10 alt="...">
+                      </a>
                       <div class="ong-project-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category">An Indigenous Framework for Authenticity, Integrity and Non-Repudiation in Data Communication (FND)</p>
@@ -288,7 +298,9 @@
                     <!-- Project-7 -->
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="ong-project">
+                      <a href="project_templtes/completed-7.html">
                       <img src="assets/img/project_img/alb.png" class="img-fluid"  h-9 w-10  alt="...">
+                      </a>
                       <div class="ong-project-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category">Adaptive Learning-Based Fault Tolerant Routing in Wireless Adhoc and Sensor Networks (ALB)</p>
@@ -317,7 +329,9 @@
                   <!-- project-8 -->
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                       <div class="ong-project">
+                        <a href="project_templtes/completed-8.html">
                         <img id="tribe-img" src="assets/img/project_img/auc.png" class="img-fluid"  h-9 w-10  alt="...">
+                        </a>
                         <div class="ong-project-content">
                           <div class="d-flex justify-content-between align-items-center mb-3">
                             <p class="category"> Development of Feasibility Assessment Model for Adaptation of Underground Coal Gasification Technology in the North-East Region of India(AUC)</p>
@@ -345,7 +359,9 @@
                     <!-- Project-9 -->
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                       <div class="ong-project">
+                        <a href="project_templtes/completed-9.html">
                         <img src="assets/img/Products/jaltarang_localization_gui.png" class="img-fluid"  h-9 w-10  alt="...">
+                        </a>
                         <div class="ong-project-content">
                           <div class="d-flex justify-content-between align-items-center mb-3">
                             <p class="category">Towards Robust Efficient and Secure Data Acquisition in Underwater Sensor Networks (TRE)</p>
@@ -373,7 +389,9 @@
                     <!-- Project-10 -->
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                       <div class="ong-project">
+                        <a href="project_templtes/completed-10.html">
                         <img src="assets/img/project_img/wpm.png" class="img-fluid"  h-9 w-10  alt="...">
+                        </a>
                         <div class="ong-project-content">
                           <div class="d-flex justify-content-between align-items-center mb-3">
                             <p class="category">Target Tracking in Distributed Wireless Sensor Networks in the Presence of Misbehaving Nodes (WPM)</p>
