--- a/product-pg2.html
+++ b/product-pg2.html
@@ -144,8 +144,19 @@
                 <img id="pdt-img" src="assets/img/Products/macosim_topology.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="https://cse.iitkgp.ac.in/~smisra/swan/tre/macosim.html">MAcoSim: Matlab-based Acoustic Underwater Simulator</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <h4><a href="https://cse.iitkgp.ac.in/~smisra/swan/tre/macosim.html" target="_blank">MAcoSim: Matlab-based Acoustic Underwater Simulator</a></h4>
+                  <p>
+                    MAcoSim is a MATLAB based simulator for Underwater Sensor Networks. MAcoSim is operated by both GUI and MATLAB command line interface. The following are the salient features of the simulator.
+                    DES Core
+                    Centralized parameter manager
+                    Topology Module
+                    Localization module
+                    Physical layer
+                    MAC layer
+                    Network layer
+                    Mobility module
+                    GUI and command-line input
+                    Trace file and command-line/file output</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
@@ -156,8 +167,8 @@
                 <img id="pdt-img" src="assets/img/Products/GWS.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="http://ambusens.iitkgp.ac.in/">Generic Wireless Sensor Network Kit v1.0</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <h4><a href="#" target="_blank">Generic Wireless Sensor Network Kit v1.0</a></h4>
+                  <p>The sensor node developed for the Generic Wireless Network Kit consumes low power and is flexible with respect to functionalities. The board can be easily programmed by the users. User-specific algorithms can be implemented in the sensor board.</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
@@ -169,7 +180,7 @@
               </a>
                 <div id="pdt-info">
                   <h4><a href="http://agrisys.iitkgp.ac.in">Physiological Wireless Sensor Network Kit</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <p>The low-cost physiological sensor network kit developed by the SWAN Group can be used for automated remote monitoring of different physiological parameters of patients, such as blood oxygen saturation, air-flow, body temperature, cardiac signals, and heart-rate. Communication of body signals occur over wireless medium using ZigBee and WiFi standards. The entire system is wearable.</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
@@ -181,7 +192,7 @@
               </a>
                 <div id="pdt-info">
                   <h4><a href="http://agrisys.iitkgp.ac.in">Agricultural Wireless Sensor Network Kit</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <p>Our Agricultural Sensor Network platform is developed for multi-purpose use in the field of Agriculture such as for water-level monitoring, soil-moisture content, pump actuation and intruder detection. The system is powered by renewable sources of energy. Additionally, the system supports special features such as sending SMS alert to the farmer’s cell phones informing various field parameters. Along with the sensor board development, low-cost water-level sensor has been developed by the SWAN Group.</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
