--- a/product-pg3.html
+++ b/product-pg3.html
@@ -144,8 +144,8 @@
                 <img id="pdt-img" src="assets/img/Products/smart-grid.jpg" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="https://cse.iitkgp.ac.in/~smisra/swan/tre/macosim.html">Smart-Grid Educational Platform</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <h4><a href="#">Smart-Grid Educational Platform</a></h4>
+                  <p>An educational smart-grid platform has been developed by the SWAN Group. This product helps the users in supplying energy without having a complex architecture at their end. In traditional smart grid, the users get power supply as per their requests, while paying high price, or by waiting for a significant duration, in order to get uninterrupted supply in the on-peak hours</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
@@ -156,8 +156,8 @@
                 <img id="pdt-img" src="assets/img/Products/s-wVirtualLab.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="http://vlssit.iitkgp.ernet.in/isad/isad/">Virtual Labs for Software Engineering</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <h4><a href="http://vlssit.iitkgp.ernet.in/isad/isad/" target="_blank">Virtual Labs for Software Engineering</a></h4>
+                  <p>The Software Engineering Virtual Lab covers popular topics on the subject catering to the university syllabi and provides a workspace to the students to have hands-on practice. This lab teaches ER modeling, various UML diagrams, cyclomatic complexity, test suite design and other topics. Various software including Graphviz and PlantUML have been used at the back end. The workspace has been designed in such a way so that the students can understand the basic concepts and building blocks, rather than simply drawing some diagrams.</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
@@ -168,20 +168,20 @@
                 <img id="pdt-img" src="assets/img/Products/advVL.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="http://vlssit.iitkgp.ernet.in/ant/ant/">Virtual Labs for Advanced Network Technologies</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <h4><a href="http://vlssit.iitkgp.ernet.in/ant/ant/" target="_blank">Virtual Labs for Advanced Network Technologies</a></h4>
+                  <p>The Advanced Network Technologies Virtual Lab deals with advanced topics in computer networks. This lab helps the students understand the basic concepts of each topic through remote network simulations using two simulatos – NS-2 and NS-3.</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
 
             <!-- Pdt-item -->
             <div id="product-item" class="d-md-flex post-entry-2 half">
-              <a href="http://agrisys.iitkgp.ac.in" target="_blank" >
+              <a href="#" target="_blank" >
                 <img id="pdt-img" src="assets/img/Products/dmwsn.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="http://agrisys.iitkgp.ac.in">Dual-Medium Wireless Sensor Network test-bed</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <h4><a href="#">Dual-Medium Wireless Sensor Network test-bed</a></h4>
+                  <p>The dual-medium WSN test-bed operates over 2.4Ghz wireless spectrum by transmitting various sensor data from three slave nodes to a central master node. In case of link failure or jamming attacks, the system detects the failure in communication link and switches over to acoustic data transmission. Various data such as text, audio and video have been successfully transmitted using this test-bed.</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
