--- a/product-pg4.html
+++ b/product-pg4.html
@@ -139,12 +139,12 @@
 
             <!-- Pdt-item -->
             <div id="product-item" class="d-md-flex post-entry-2 half">
-              <a href="http://agrisys.iitkgp.ac.in" target="_blank" >
+              <a href="#" target="_blank" >
                 <img id="pdt-img" src="assets/img/Products/r2d2.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="https://cse.iitkgp.ac.in/~smisra/swan/tre/macosim.html">R2D2: Rotating-turret 2D-scanning and Dead-reckoning platform</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <h4><a href="#">R2D2: Rotating-turret 2D-scanning and Dead-reckoning platform</a></h4>
+                  <p>The R2D2 system makes use of 2D acoustic scanning, enhanced with dead reckoning systems to navigate unchartered and disaster affected areas. The system remotely generates a fusion map which enables the remote operator to visualize the rover’s operating terrain. The R2D2 data being sent over resource-constrained wireless networks can work under all lighting conditions, including pitch darkness.</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
@@ -155,8 +155,8 @@
                 <img id="pdt-img" src="assets/img/Products/uavAgri.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="https://www.youtube.com/watch?v=Y8PNR9PXO8c&feature=youtu.be">Unmanned Aerial Platforms for Agriculture</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <h4><a href="https://www.youtube.com/watch?v=Y8PNR9PXO8c&feature=youtu.be" target="_blank">Unmanned Aerial Platforms for Agriculture</a></h4>
+                  <p>The low-cost UAV platforms are being worked upon, keeping in mind the specialized needs and requirements for agriculture. Various strategies for implementing a networked UAV swarm and control o0ver wireless networks is being explored using these systems. The additional aspect of low-altitude remote sensing for agriculture is being worked upon.</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
@@ -167,8 +167,8 @@
                 <img id="pdt-img" src="assets/img/Products/phone.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="http://vlssit.iitkgp.ernet.in/ant/ant/">Smartphone Apps for Physical Activity Sensing over Wireless Networks</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <h4><a href="#">Smartphone Apps for Physical Activity Sensing over Wireless Networks</a></h4>
+                  <p>The R2D2 system makes use of 2D acoustic scanning, enhanced with dead reckoning systems to navigate unchartered and disaster affected areas. The system remotely generates a fusion map which enables the remote operator to visualize the rover’s operating terrain. The R2D2 data being sent over resource-constrained wireless networks can work under all lighting conditions, including pitch darkness.</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
@@ -180,7 +180,7 @@
               </a>
                 <div id="pdt-info">
                   <h4><a href="http://agrisys.iitkgp.ac.in">Low Cost Internet of Things Node</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
+                  <p>The low-cost IoT node can be easily reconfigured for a wide variety of applications, ranging from indoor use to outdoor use. The data from these nodes is transmitted wirelessly to a remote server which hosts an analytics and decision engine. The node can be easily controlled using a smartphone . The cost of assembling a single node is approximately INR 2500. The cost goes up with the sensors being used with the node.</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
